DuPont DevSB/src/objects/pse__Project_Task_Points_History__c.object
<CustomObject>
    <customHelpPage>pse__ProjectTaskPointsHistoryHelp</customHelpPage>
    <description>Tracks changes made to the Points field on project tasks. Project tasks have a master-detail relationship with project task points histories.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Change_Date__c</fullName>
        <label>Change Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Change_in_Value__c</fullName>
        <inlineHelpText>The change in value from the last change.</inlineHelpText>
        <label>Change in Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__New_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Value</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Old_Value__c</fullName>
        <label>Old Value</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task__c</fullName>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Project Tasks Points History</relationshipLabel>
        <relationshipName>Project_Tasks_Points_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Task Points History</label>
    <nameField>
        <displayFormat>PTSHIST-{0000}</displayFormat>
        <label>Project Task Points History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Tasks Points History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>